apps/base/yaft/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yaft
  namespace: yaft
  labels:
    app: yaft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yaft
  template:
    metadata:
      labels:
        app: yaft
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: yaft
          image: ghcr.io/leotsgo/yaft:88ed9e3
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
