apps/base/yaft/service.yml
apiVersion: v1
kind: Service
metadata:
  name: yaft
  namespace: yaft
spec:
  selector:
    app: yaft
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
